# mini-coder

./: .env.example  .gitignore  AGENTS.md  CAPABILITY_LEARNING.md  CLAUDE.md  D3_MEMORY_NOTES.md  D4_SECURITY_NOTES.md  D5_CONTEXT_NOTES.md  READING_ORDER.md  README.md  agent.py  builtin_capabilities.py  cache.py  capability.py  config.py  db.py  fake_tools.py  findings.md  main.py  memory.py  progress.md  provider.py  pyproject.toml  reflection.py  registry.py  retriever.py  security.py  server.py  task_plan.md  test_d2_token.py  test_recall.py  test_w4.py  test_w5.py  test_w6.py  tool.py
capabilities/: base.py  builtin.py
core/: agent.py  execution.py  registry.py  tool.py
evaluation/: rollback_summary.txt
infra/: audit.py  context_compressor.py  context_manager.py  db.py  llm_output.py  memory.py  reflection.py  security.py  trace_repository.py
static/: index.html
tests/: test_d11_db_schema.py  test_d11_execution_model.py  test_d11_trace_repository.py  test_d2_token.py  test_d3_memory_flow.py  test_d3_memory_pipeline.py  test_d4_audit.py  test_d4_confirmation.py  test_d4_security.py  test_d5_context_budget.py  test_d5_context_compression.py  test_d5_context_db.py  test_d5_context_flow.py  test_d5_context_summary.py  test_d5_context_window.py  test_llm_output.py  test_memory_scoring.py  test_reflection_parser.py  test_w4.py  test_w5.py  test_w6.py
